--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@tailwindcss/forms": "^0.4.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.4.0",
     "faker": "^5.5.3",
     "postcss": "^8.4.5",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
