--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "firebase": "^9.6.8",
     "next": "latest",
+    "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
@@ -17,7 +19,7 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
-    "faker": "^5.5.3",
+    "faker": "5.5.3",
     "postcss": "^8.4.5",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
