--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.8",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "recoil": "^0.6.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
