--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "4.0.0-beta.7",
+    "random-avatar-generator": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
